--- a/src/notes.html
+++ b/src/notes.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Main</title>
+    <title>Notes</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="./notes.js"></script>
+    <!-- <script src="./notes.js"></script> -->
   </body>
 </html>
